[package]
name = "ultimoid"
version = "0.1.0"
authors = ["Jakub Arnold <darthdeus@gmail.com>"]

[dependencies]
rmp-serialize = "0.8.0"
rmp-serde = "0.13.7"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
ggez = "0.4.3"
pancurses = "0.16"
time = "*"

piston2d-graphics = "*"
piston_window = "0.70.0"
itertools = "*"
