[package]
name = "ultimoid"
version = "0.1.0"
authors = ["Jakub Arnold <darthdeus@gmail.com>"]

[dependencies]
rmp-serialize = "0.8.0"
rmp-serde = "0.13.7"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
ggez = "0.4.3"
pancurses = "0.16"
time = "0.1.40"

piston2d-graphics = "0.26.0"
piston_window = "0.80.0"
itertools = "0.7.8"
cgmath = "0.16.1"
